--- a/calculator.html
+++ b/calculator.html
@@ -23,19 +23,25 @@
     <div>
       <div class="label">Mortgage Loan Amount</div>
       <p/>
-      <input type="number" id="mortgage" value="100000"/>
+      <input type="number" id="mortgage" value="100000" onchange="updater();"/>
       <p/>
       <div class="label">Interest Rate as %</div>
       <p/>
-      <input type="number" id="rate" value="5">
+      <input type="number" id="rate" value="5" onchange="updater();"">
       <p/>
       <div class="label">How much extra you pay per month</div>
       <p/>
       <input id="extra" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="750"
       data-slider-step="10" data-slider-value="0"
-      data-slider-ticks-labels='["$0", "$250", "$500", "$750"]'/>
+      data-slider-ticks-labels='["$0", "$250", "$500", "$750"]'
+      onchange="updater();""/>
       <p/>
-      
+      <table class="results">
+        <tr><th>Total Mortgage Cost Before</th><td></td><th>Total Mortgage Cost After</th><td></td><th>How much you <b>SAVE</b></th></tr>
+        <tr><td><div id="total_before">191,000</div></td><td>-</td><td><div id="total_after">160,000</div></td><td>=</td><td><div id="total_diff" class="result emphasize"> 29,000</div></td></tr>
+        <tr><th>Time to payoff before</th><td></td><th>Time to Payoff After</th><td></td><td>Time Saved</td></tr>
+        <tr><td><div id="time_before">30 years</div></td><td>-</td><td><div id="time_after">22 years</div></td><td>=</td><th><div id="time_diff" class="result emphasize"> 8 years</div></th></tr>
+      </table>
 
     </div>
     <!--Now calculations-->
@@ -46,6 +52,37 @@
          ticks_labels: ['$0', '$250', '$500', '$750'],
 
       });
+      //The updater
+      function updater() {
+        let money_digits = 3
+        let time_digits = 3
+        let A = Number($("#mortgage").val())
+        let r = Number($("#rate").val()/100)
+        let k = 12;
+        let N = 360;
+        let extra = Number($("#extra").val());
+        let pmt_info = paymentCalcWithOver(A, r, k, N, extra);
+        let total_before = sigdigits(pmt_info["original"]["total"], money_digits);
+        let total_after = sigdigits(pmt_info["new"]["total"], money_digits);
+        let total_diff = total_before - total_after;
+        let time_before_months = pmt_info["original"]["npmts"]
+        let time_after_months = pmt_info["new"]["npmts"]
+
+        let time_before_years = sigdigits(time_before_months / 12, time_digits)
+        let time_after_years = sigdigits(time_after_months / 12, time_digits)
+        let time_diff_years = (time_before_years - time_after_years);
+        //Update the fields
+        $("#time_before").html(time_before_years+" years")
+        $("#time_after").html(time_after_years+" years")
+        $("#time_diff").html(time_diff_years+" years")
+
+        $("#total_before").html("$"+total_before);
+        $("#total_after").html("$"+total_after);
+        $("#total_diff").html("$"+total_diff);
+        console.log("Mortgage="+A+" rate="+r+" extra="+extra)
+      }
+
+      updater()
     </script>
     <!--
     <script src="https://spreadsheets.google.com/feeds/cells/1jxuBHUYA8Jy5iSRx2PZ7lNg0Ag2gf-cC63LoCCru-j4/od6/public/values?alt=json-in-script&callback=myCallback"></script>
