Making it look a bit prettier

--- a/calculator.html
+++ b/calculator.html
@@ -19,6 +19,8 @@
   </head>
   <body>
     <h1>Mortgage Paydown Benefits</h1>
+    <h5>A consumer outreach project by
+    <img src="logo-blue-dl.png" width="200"/></h5>
     <hr/>
     <div>
       <div class="label">Mortgage Loan Amount</div>
