--- a/calculatorv2.html
+++ b/calculatorv2.html
@@ -19,22 +19,26 @@
   </head>
   <body>
     <h1>Mortgage Paydown Benefits</h1>
+    <h5>A consumer outreach project by
+    <img src="logo-blue-dl.png" width="200"/></h5>
     <hr/>
+    <p/>
     <div>
       <table >
         <tr><th class="label" style="min-width:200px">Mortgage Loan Amount</th><td/><th class="label">Interest Rate</th></tr>
         <tr>
-          <td><input size="8" type="number" id="mortgage" value="250000" onchange="updater();"/></td><td>
-          <td><input size="4" type="number" id="rate" value="5" onchange="updater();"></td>
+          <td><input size="8" type="number" id="mortgage" value="250000" step="1000" onchange="updater();"/></td><td>
+          <td><input size="4" type="number" id="rate" value="5" step="0.1" onchange="updater();"></td>
         </tr>
       </table>
       <p/>
       <div class="paylabel">If you pay <span id="extra_amount">$0</span> extra a month</div>
       <p/>
-      <input id="extra" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="750"
-      data-slider-step="10" data-slider-value="25"
-      data-slider-ticks-labels='["$0", "$250", "$500", "$750"]'
-      onchange="updater();"/>
+      <input id="extra" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="500"
+      data-slider-step="10" data-slider-value="50"
+      data-slider-ticks-labels='["$0", "$100", "$200", "$300", "$400", "$500"]'
+      onchange="updater();"
+      style="width:400px; margin:28px"/>
       <p/>
       <div class="resultlabel">You save <span id="total_diff"></span> and</div>
       <div class="resultlabel"><span id="time_diff"></span> of payments</div>
@@ -42,8 +46,8 @@
     <script>
       $("#extra").slider({
 	       tooltip: 'always',
-         ticks: [0, 250, 500, 750],
-         ticks_labels: ['$0', '$250', '$500', '$750'],
+         ticks: [0, 100, 200, 300, 400, 500],
+         ticks_labels: ['$0', '$100', '$200', '$300', '$400', '$500'],
 
       });
       //The updater
